--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --delete src/declarations"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.9.2",
-    "@dfinity/candid": "0.9.2",
+    "@dfinity/agent": "^0.9.2",
+    "@dfinity/candid": "^0.9.2",
     "@dfinity/principal": "0.9.2",
     "assert": "2.0.0",
     "buffer": "6.0.3",
@@ -26,8 +26,10 @@
     "html-webpack-plugin": "5.3.1",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
+    "style-loader": "^3.2.1",
     "terser-webpack-plugin": "5.1.1",
     "util": "0.12.3",
+    "vue-style-loader": "^4.1.3",
     "webpack": "5.24.4",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "^3.11.2"
@@ -39,6 +41,9 @@
     "last 2 edge version"
   ],
   "dependencies": {
+    "@dfinity/auth-client": "^0.9.2",
+    "@dfinity/authentication": "^0.9.2",
+    "@dfinity/identity": "^0.9.2",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.14"
