--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^9.0.1",
+    "deepmerge": "^4.2.2",
     "events": "3.3.0",
     "html-webpack-plugin": "5.3.1",
     "process": "0.11.10",
+    "sass": "~1.32",
+    "sass-loader": "^12.1.0",
     "stream-browserify": "3.0.0",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "5.1.1",
@@ -47,6 +50,7 @@
     "@dfinity/identity": "^0.9.2",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuetify": "^2.5.7"
   }
 }
