--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "util": "0.12.3",
     "vue-style-loader": "^4.1.3",
     "webpack": "5.24.4",
-    "webpack-cli": "4.5.0",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "browserslist": [
@@ -50,6 +50,7 @@
     "@dfinity/identity": "^0.9.2",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.6",
+    "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.5.7"
   }
