--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "copy-webpack-plugin": "^9.0.1",
     "deepmerge": "^4.2.2",
     "events": "3.3.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "5.3.1",
     "process": "0.11.10",
     "sass": "~1.32",
@@ -52,6 +53,7 @@
     "vue-loader": "^15.9.6",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
-    "vuetify": "^2.5.7"
+    "vuetify": "^2.5.7",
+    "vuex": "^3.6.2"
   }
 }
