--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "vue": "^2.6.14",
     "vue-loader": "^15.9.6",
     "vue-router": "^3.5.2",
+    "vue-scrollview": "^3.0.1",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.5.7",
     "vuex": "^3.6.2"
